--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,12 +12,20 @@ jobs:
           rust-version: nightly
     - uses: actions/checkout@v2
     - name: Build uad-windows
-      run: cargo build --release
-    - name: Archive binary
+      run: |
+        cargo build --features glow --release
+        mv target/release/uad_gui.exe target/release/uad_gui-opengl.exe
+        cargo build --release
+    - name: Create Vulkan build artifact
       uses: actions/upload-artifact@v2
       with:
-        name: uad_gui-x86_64
+        name: uad_gui-windows
         path: target/release/uad_gui.exe
+    - name: Create OpenGL build artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: uad_gui-opengl-windows
+        path: target/release/uad_gui-opengl.exe
 
   uad_linux:
     runs-on: ubuntu-latest
@@ -30,15 +38,23 @@ jobs:
       run: |
         sudo apt-get -qq update
         sudo apt-get install -y libxkbcommon-dev lld
+
     - name: Build uad-linux
-      run: cargo build --release
-    - name: Make it executable
-      run: chmod +x target/release/uad_gui
-    - name: Archive binary
+      run: |
+        cargo build --features glow --release
+        mv target/release/uad_gui target/release/uad_gui-opengl
+        cargo build --release
+     - name: Create Vulkan build artifact
       uses: actions/upload-artifact@v2
       with:
-        name: uad_gui-x86_64-linux
+        name: uad_gui-linux
         path: target/release/uad_gui
+
+    - name: Create OpenGL build artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: uad_gui-opengl-linux
+        path: target/release/uad_gui-opengl
 
   uad_macos:
     runs-on: macOS-latest
@@ -48,11 +64,18 @@ jobs:
           rust-version: nightly
     - uses: actions/checkout@v2
     - name: Build uad-macos
-      run: cargo build --release
-    - name: Make it executable
-      run: chmod +x target/release/uad_gui
-    - name: Archive binary
+      run: |
+        cargo build --features glow --release
+        mv target/release/uad_gui target/release/uad_gui-opengl
+        cargo build --release
+    - name: Create Vulkan build artifact
       uses: actions/upload-artifact@v2
       with:
         name: uad_gui-macos
         path: target/release/uad_gui
+
+    - name: Create OpenGL build artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: uad_gui-opengl-macos
+        path: target/release/uad_gui-opengl
