--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,10 @@ jobs:
         with:
           command: build
           args: --release --target ${{ matrix.target }} --all-features
+      - name: Rename
+        run: |
+          mv target/${{ matrix.target }}/release/uad_gui target/${{ matrix.target }}/release/uad_gui-${{ matrix.build_target }}
+          mv target/${{ matrix.target }}/release/uad_gui-opengl target/${{ matrix.target }}/release/uad_gui-opengl-${{ matrix.build_target }}
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -51,6 +55,6 @@ jobs:
         with:
           draft: true
           body_path: ${{ github.workspace }}/CHANGELOG.md
-          files: target/release/uad_gui*
+          files: target/${{ matrix.target }}/release/uad_gui-
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
