--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,15 +40,15 @@ jobs:
         with:
           command: build
           args: --release --target ${{ matrix.target }}
+      - name: Renaming
+        run: mv target/${{ matrix.target }}/release/uad_gui target/${{ matrix.target }}/release/uad_gui-${{ matrix.build_target }}
       - name: Cargo build (Glow feature)
         uses: actions-rs/cargo@v1
         with:
           command: build
           args: --release --target ${{ matrix.target }} --features glow
-      - name: Rename
-        run: |
-          mv target/${{ matrix.target }}/release/uad_gui target/${{ matrix.target }}/release/uad_gui-${{ matrix.build_target }}
-          mv target/${{ matrix.target }}/release/uad_gui-opengl target/${{ matrix.target }}/release/uad_gui-opengl-${{ matrix.build_target }}
+      - name: Renaming
+        run: mv target/${{ matrix.target }}/release/uad_gui target/${{ matrix.target }}/release/uad_gui-opengl-${{ matrix.build_target }}
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
